[project]
name = "yottaagent"
version = "0.1.0"
description = "An agent to assist with M tests scripts"
authors = [{ name = "Sanjay Venkat", email = "sanjayvenkat2000@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "agno (>=1.5.1,<2.0.0)",
    "docker (>=7.1.0,<8.0.0)",
    "python-gitlab (>=5.6.0,<6.0.0)",
    "google-genai (>=1.15.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
